[package]
name = "ibps"
version = "0.1.0"
authors = ["Diogo Braganca <braganca@stanford.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"


[dependencies]
rug = "1.12"
num-integer = "0.1.44"
num-complex = "0.4"
lazy_static = "1.4.0"
ndarray = "0.15.3"